# cloud-hypervisor

./: Cargo.toml
arch/src/x86_64/: regs.rs
cloud-hypervisor/: Cargo.toml
cloud-hypervisor/src/: main.rs
devices/src/: ioapic.rs  ivshmem.rs
hypervisor/: Cargo.toml
hypervisor/src/: lib.rs  vm.rs
hypervisor/src/arch/x86/emulator/: mod.rs
hypervisor/src/themis/: abi.rs  config.rs  consts.rs  emulator.rs  helpers.rs  hypervisor_impl.rs  mmap.rs  mod.rs  policy_walker.rs  vcpu.rs  vm_impl.rs  vm_state.rs
hypervisor/src/themis/defaults/: confidential.json  standard.json
virtio-devices/: Cargo.toml
virtio-devices/src/transport/: pci_device.rs
vmm/: Cargo.toml
vmm/src/: config.rs  device_manager.rs  interrupt.rs  lib.rs  seccomp_filters.rs  vm.rs  vm_config.rs
